--- a/Data  Structures/list.ipynb
+++ b/Data  Structures/list.ipynb
@@ -96,6 +96,32 @@
    "source": [
     "print(app[-3])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(app[-6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(123)"
+   ]
   }
  ],
  "metadata": {
