--- a/Data  Structures/list.ipynb
+++ b/Data  Structures/list.ipynb
@@ -122,6 +122,15 @@
    "source": [
     "print(123)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print"
+   ]
   }
  ],
  "metadata": {
