--- a/Data  Structures/strings.ipynb
+++ b/Data  Structures/strings.ipynb
@@ -210,32 +210,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "manvi singh\n"
+      "manvii singh\n"
      ]
     }
    ],
    "source": [
-    "name = 'manvi singh'\n",
+    "name = 'manvii singh'\n",
     "print(name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "m a n v i   s i n g h "
+      "m a n v i i   s i n g h "
      ]
     }
    ],
