--- a/Data  Structures/PracticeQUE.ipynb
+++ b/Data  Structures/PracticeQUE.ipynb
@@ -37,10 +37,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 x 1 = 5\n",
+      "5 x 2 = 10\n",
+      "5 x 3 = 15\n",
+      "5 x 4 = 20\n",
+      "5 x 5 = 25\n",
+      "5 x 6 = 30\n",
+      "5 x 7 = 35\n",
+      "5 x 8 = 40\n",
+      "5 x 9 = 45\n",
+      "5 x 10 = 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "num= int(input(\"enter a number to print its multipliction table: \"))\n",
+    "i = 1\n",
+    "while i <= 10:\n",
+    "    print(f\"{num} x {i} = {num * i}\")\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "6\n",
+      "12\n",
+      "20\n",
+      "30\n",
+      "42\n",
+      "56\n",
+      "72\n",
+      "90\n",
+      "110\n",
+      "132\n",
+      "156\n",
+      "182\n",
+      "210\n",
+      "240\n",
+      "272\n",
+      "306\n",
+      "342\n",
+      "380\n",
+      "420\n",
+      "462\n",
+      "506\n",
+      "552\n",
+      "600\n",
+      "650\n",
+      "702\n",
+      "756\n",
+      "812\n",
+      "870\n",
+      "930\n",
+      "992\n",
+      "1056\n",
+      "1122\n",
+      "1190\n",
+      "1260\n",
+      "1332\n",
+      "1406\n",
+      "1482\n",
+      "1560\n",
+      "1640\n",
+      "1722\n",
+      "1806\n",
+      "1892\n",
+      "1980\n",
+      "2070\n",
+      "2162\n",
+      "2256\n",
+      "2352\n",
+      "2450\n",
+      "2550\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum_even_numbers = 0\n",
+    "for i in range(1, 101):\n",
+    "    if i % 2 == 0:\n",
+    "        sum_even_numbers += i\n",
+    "        print( sum_even_numbers)"
+   ]
   }
  ],
  "metadata": {
