--- a/Data  Structures/strings.ipynb
+++ b/Data  Structures/strings.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -29,21 +29,21 @@
      "output_type": "stream",
      "text": [
       "Johny Johny Yes papa eating\n",
-      "sugar No Papa \n",
+      "sugar No papa \n",
       "Open Your Mouth Ha Ha Ha\n"
      ]
     }
    ],
    "source": [
     "poem = '''Johny Johny Yes papa eating\n",
-    "sugar No Papa \n",
+    "sugar No papa \n",
     "Open Your Mouth Ha Ha Ha'''\n",
     "print(poem)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "['Johny Johny Yes papa eating', 'sugar No Papa ', 'Open Your Mouth Ha Ha Ha']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
      "output_type": "stream",
      "text": [
       "Johny Johny Yes Dada drinking\n",
-      "sugar No Papa \n",
+      "sugar No Dada \n",
       "close Your Mouth Ha Ha Ha\n"
      ]
     }
