--- a/conditions.ipynb
+++ b/conditions.ipynb
@@ -78,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the value is not positive\n"
+      "the value is positive\n"
      ]
     }
    ],
@@ -100,21 +100,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the number is not even\n"
+      "the number is odd\n"
      ]
     }
    ],
    "source": [
     "#question2\n",
     "var = int(input(\"Enter a number:\"))\n",
-    "if num % 2 == 0:\n",
+    "if number % 2 == 0:\n",
     "    print(\"the number is odd\")\n",
     "else:\n",
     "    print(\"the number is not even\")"
@@ -195,7 +195,7 @@
     "            else:\n",
     "                print('password does not match')\n",
     "        else:\n",
-    "            print('password must be between 8 and 15 characters')\n",
+    "            print('password must be between 8 to 15 characters')\n",
     "    else:\n",
     "        print('invalid email')\n",
     "else:\n",
