--- a/datatype.ipynb
+++ b/datatype.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -42,53 +42,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('apple', 'banana', 'cherrry')\n"
+      "('apple', 'banana', 'orange')\n"
      ]
     }
    ],
    "source": [
-    "frui = ('apple','banana','cherrry')\n",
+    "fruit = ('apple','banana','orange')\n",
     "\n",
-    "print(frui)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'apppend'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mfruit\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mapppend\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstrawberry\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(fruit)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'apppend'"
-     ]
-    }
-   ],
-   "source": [
-    "fruit.apppend(\"strawberry\")\n",
     "print(fruit)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fruit = ('apple','banana','cherry') #deded\n",
-    "fruit.apppend(\"grapes\")\n"
    ]
   },
   {
